tf/modules/networking/main.tf
resource "aws_vpc" "vpc" {
  cidr_block           = "${var.vpc_cidr}"

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name        = "${var.environment}-vpc"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/*==== Subnets ======*/
/* Internet gateway for the public subnet */
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name        = "${var.environment}-igw"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/* Elastic IP for NAT */
resource "aws_eip" "eip_nat_gateway" {
  vpc        = true
  depends_on = [aws_internet_gateway.igw]
}

/* NAT */
resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = "${aws_eip.nat_eip.id}"
  subnet_id     = "${element(aws_subnet.public_subnet.*.id, 0)}"
  depends_on    = [aws_internet_gateway.igw]
  tags = {
    Name        = "nat_gateway"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/* Public subnet */
resource "aws_subnet" "subnet_public" {
  vpc_id                  = "${aws_vpc.vpc.id}"
  count                   = "${length(var.public_subnets_cidr)}"
  cidr_block              = "${element(var.public_subnets_cidr,   count.index)}"
  availability_zone       = "${element(var.availability_zones,   count.index)}"
  map_public_ip_on_launch = true
  tags = {
    Name        = "${var.environment}-${element(var.availability_zones, count.index)}-subnet-public"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/* Private subnet */
resource "aws_subnet" "subnet_private" {
  vpc_id                  = "${aws_vpc.vpc.id}"
  count                   = "${length(var.private_subnets_cidr)}"
  cidr_block              = "${element(var.private_subnets_cidr, count.index)}"
  availability_zone       = "${element(var.availability_zones,   count.index)}"
  map_public_ip_on_launch = false
  tags = {
    Name        = "${var.environment}-${element(var.availability_zones, count.index)}-subnet-private"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/* Routing table for private subnet */
resource "aws_route_table" "route_table_private" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name        = "${var.environment}-route-table-private"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/* Routing table for public subnet */
resource "aws_route_table" "route_table_public" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name        = "${var.environment}-route-table-public"
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

resource "aws_route" "route_public_internet_gateway" {
  route_table_id         = "${aws_route_table.route_table_public.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.igw.id}"
}

resource "aws_route" "route_private_nat_gateway" {
  route_table_id         = "${aws_route_table.route_table_private.id}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${aws_nat_gateway.nat_gateway.id}"
}

/* Route table associations */
resource "aws_route_table_association" "route_table_association_public" {
  count          = "${length(var.public_subnets_cidr)}"
  subnet_id      = "${element(aws_subnet.subnet_public.*.id, count.index)}"
  route_table_id = "${aws_route_table.route_table_public.id}"
}

resource "aws_route_table_association" "route_table_association_private" {
  count          = "${length(var.private_subnets_cidr)}"
  subnet_id      = "${element(aws_subnet.subnet_private.*.id, count.index)}"
  route_table_id = "${aws_route_table.route_table_private.id}"
}


/*==== Security Groups ======*/


/*==== VPC's Default Security Group ======*/
resource "aws_security_group" "security_group_default" {
  name        = "${var.environment}-sg-default"
  description = "Default security group to allow inbound/outbound from the VPC"
  vpc_id      = "${aws_vpc.vpc.id}"
  depends_on  = [aws_vpc.vpc]
  
  egress {
    from_port = "0"
    to_port   = "0"
    protocol  = "-1"
    self      = "true"
  }

  tags = {
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}

/*==== application load balancer security group ======*/
resource "aws_security_group" "sg_alb" {
  name        = "${var.environment}-sg-loadbalancer"
  description = "Loadbalancer Security Group"
  vpc_id      = "${aws_vpc.vpc.id}"
  depends_on  = [aws_vpc.vpc]
  
  ingress {
    from_port = "0"
    to_port   = "0"
    protocol  = "-1"
    self      = true
  }
  
  
  tags = {
    Environment = "${var.environment}"
    Application = "${var.appname}"
    Team        = "${var.team}"
  }
}
